adicionado client_id e client_secret

--- a/.env.example
+++ b/.env.example
@@ -70,3 +70,7 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+CLIENT_ID=9d478127-3a27-44bf-932b-725ef70122ea  
+CLIENT_ID_SECRET=NPpj7QJIpJsLOFDEDYEhveJJeAUU3Z8AQlB5oz8g
+CLIENT_REDIRECT=http://localhost/auth/callback
