--- a/.env.example
+++ b/.env.example
@@ -74,3 +74,9 @@ VITE_APP_NAME="${APP_NAME}"
 CLIENT_ID=9d478127-3a27-44bf-932b-725ef70122ea  
 CLIENT_ID_SECRET=NPpj7QJIpJsLOFDEDYEhveJJeAUU3Z8AQlB5oz8g
 CLIENT_REDIRECT=http://localhost/auth/callback
+
+#CLIENT_ID 9d48dfb2-6e63-48ad-a684-509ae96d646a  
+#CLIENT_SECRET FAUp1vLouhzk7vUPv3K7RRigiBjIX9mxIZUAFDM3
+
+#CLIENT_ID 9d4940e7-0917-4223-bbe6-5fec23a2d5b8  
+#CLIENT_SECRET vbmXLsuAIJVDXdWlRxpQujL7Ytjvq54FuWWlWxks 
